--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -4,11 +4,33 @@ body {
 	background: #D0DCE7;
 	color:#0A141D;
 }
-section {
-	background: url(images/marketer-analyzing-campaign.jpg);
+
+header {
+	background: url(../images/marketer-analyzing-campaign.jpg);
 	background-size: cover;
+	height: 50vh;
+	padding: 5px;
+	
 }
+
 a {
 	color: #1DB0AA;
 	text-decoration: none;
+
+img {
+	max-width: 100%;
+	height: auto;
+}
+
+}
+h1 {
+	text-transform: uppercase;
+	text-align: center;
+	font-size: 40px
+} 
+
+#slogan {
+	font-style: italic;
+	text-align: center;
+	font-size: 20px;
 }
