--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=EB+Garamond:400,500i|Oswald:500,700');
+
 
 * {
 	padding: 0;
@@ -5,9 +7,10 @@
 }
 
 body {
-	font-family: verdana;
-	background: #D0DCE7;
+	background: #f4f5f7;
 	color:#0A141D;
+	font-size: 16px; /*1em = 16px*/
+	font-family: EB Garamond;
 	
 }
 
@@ -15,58 +18,50 @@ header {
 	background: url(../images/marketer-analyzing-campaign.jpg);
 	background-size: cover;
     height: 800px;
-    padding-right: 50px;
-    padding-left: 50px;
+    margin:auto;
 	
 }
 
 h1 {
-	vertical-align: middle;
+	font-family: 'Oswald', sans-serif;
+	text-transform: uppercase;
+	text-align: center;
+	font-size: 4em;
+}
+
+p {
+	font-size: 1em;
+	margin: auto;
 }
 
 a {
-	color: #1DB0AA;
+	color: #a30b6b;
 	text-decoration: none;
-
-img {
-	max-width: 100%;
-	height: auto;
 }
 
 }
-h1 {
-	text-transform: uppercase;
-	text-align: center;
-	font-size: 40px
-} 
 
 nav {
 	text-align: center;
 	padding: 10px;
 	margin: 10px;
+	text-transform: uppercase;
 }
 
-img
-{
-	padding: 10px;
-}
-
-p
-{
-	padding: 20px;
-}
-
-
-footer
-{
+footer {
 	text-align: center;
 }
 
-.blog-images {
-    width:540px; /* you can use % */
-    height: auto;
+.secondary-posts {
+	margin: auto;
+	width: 30em;
 }
 
+#main-post
+{
+	margin: auto;
+	width: 30em;
+}
 #logo{
 	padding: 0;
 	float: left;
@@ -80,10 +75,6 @@ footer
 #slogan {
 	font-style: italic;
 	text-align: center;
-	font-size: 20px;
+	font-size: 2em;
 }
 
-#main-blog-image {
-    width:1080px; /* you can use % */
-    height: auto;
-}
