--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -10,7 +10,7 @@ body {
 	background: #f4f5f7;
 	color:#0A141D;
 	font-size: 16px; /*1em = 16px*/
-	font-family: EB Garamond;
+	font-family: 'EB Garamond', serif;
 	
 }
 
@@ -28,6 +28,11 @@ h1 {
 	text-align: center;
 	font-size: 4em;
 }
+h3 {
+	text-align: center;
+	font-family: 'Oswald', sans-serif;
+	margin-top: 1em;
+}
 
 p {
 	font-size: 1em;
@@ -39,18 +44,30 @@ a {
 	text-decoration: none;
 }
 
+img
+{
+	width: 100%;
 }
+
 
 nav {
 	text-align: center;
 	padding: 10px;
 	margin: 10px;
 	text-transform: uppercase;
+	height: 4em;
 }
 
 footer {
 	text-align: center;
 }
+
+hr {
+	margin: 1em;
+}
+
+
+
 
 .secondary-posts {
 	margin: auto;
@@ -65,6 +82,7 @@ footer {
 #logo{
 	padding: 0;
 	float: left;
+	width: 4em;
 }
 
 
