--- a/unit_6/css/style.css
+++ b/unit_6/css/style.css
@@ -34,6 +34,7 @@ h1 {
 	text-transform: uppercase;
 	text-align: center;
 	font-size: 4em;
+	clear: both;
 }
 
 h3 {
@@ -86,7 +87,7 @@ footer {
 }
 
 article {
-	width: 30%;
+	width: 33.3%;
 	float:left;
 	padding: 1.5%
 }
@@ -104,10 +105,10 @@ form p {
 	margin: auto;
 }
 
-.container *{
+/*.container *{
 	float: left;
 	padding: 2em;
-}
+}*/
 
 .secondary-posts {
 	max-width: 1200px;
@@ -115,24 +116,25 @@ form p {
 }
 
 .intro {
-  	background: url(../images/cover-photo.jpg), linear-gradient(#eb01a5, #d13531);
+  	background: linear-gradient(to top, rgba(20,160,152, 0.1), rgba(20,160,152, 0.6)), url(../images/cover-photo.jpg);
 	background-size: cover;
 	height: 800px;
+	color: white;
 }
 
-#main-post{
+/*#main-post{
 	background: red;
-	width: 33.33%;
+	width: 63.33%;
 }
+
 #main-post img p{
 	float: left;
-}
+}*/
 
 aside{
 	background: red;
-	float: right;
-	width: 35%;
-	margin: 0 5% 0 0;
+	/*float: right;*/
+	width: 33.3%;
 	}
 
 
